--- a/td3/Makefile
+++ b/td3/Makefile
@@ -1,9 +1,9 @@
-OPENCV=/opt/opencv/
+OPENCV=/opt/opencv
 ROOT=.
 
 CC = g++
 CFLAGS  = -Wall -Wextra -I$(ROOT) -I$(OPENCV)/include
-LDFLAGS = -L$(OPENCV)/lib -lopencv_core -lopencv_imgproc -lopencv_highgui 
+LDFLAGS = -L/usr/lib/x86_64-linux-gnu -lopencv_core -lopencv_imgproc -lopencv_highgui 
 
 OBJ = morphology.o
 BIN = \
@@ -13,11 +13,11 @@ BIN = \
 all: $(OBJ) $(BIN)
 
 make-se: 
-	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $@.cpp
+	$(CC) $(CFLAGS) -o $@ $@.cpp $(LDFLAGS) 
 morphology.o: morphology.cpp morphology.hpp
 	$(CC) -c $(CFLAGS) -o $@ morphology.cpp
 %: %.cpp morphology.o
-	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 clean:
 	rm -rf $(BIN) *.o *~ *.png
 
