add extract-gear & extract-cell

--- a/td3/Makefile
+++ b/td3/Makefile
@@ -16,7 +16,10 @@ BIN = \
 	labeling-color\
 	distance\
 	skeleton\
-	pyramid
+	pyramid\
+	binarization\
+	substract\
+	add-boundary
 
 all: $(OBJ) $(BIN)
 
